# stockDiary

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/stocks/: route.ts
src/app/api/stocks/[symbol]/: route.ts
src/app/api/stocks/search/: route.ts
src/app/api/trades/: route.ts
src/components/: CubeFragmentation.tsx  CurrentPrice.tsx  ImagePopupModal.tsx  RippleTransition.tsx  Simple3DTest.tsx  StockSearchInput.tsx  TradeDetailModal.tsx  TradeFormModal.tsx  TradingDashboard.tsx  sidebar.tsx
src/data/: comments.json  sites.json  trades.json
src/hooks/: useStockPrice.ts
src/lib/: storage.ts  yahoo-finance.ts
src/types/: finance.ts  index.ts
